add documentation to handlers
