# docs/swagger.yaml
@@ -1,4 +1,61 @@
 basePath: /
+definitions:
+  handlers.CreateUserRequestBody:
+    properties:
+      email:
+        minLength: 3
+        type: string
+      name:
+        maxLength: 255
+        minLength: 4
+        type: string
+      password:
+        maxLength: 255
+        minLength: 6
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
+  handlers.SessionRequestBody:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  handlers.SessionStart.response:
+    properties:
+      token:
+        type: string
+    type: object
+  models.Book:
+    properties:
+      id:
+        type: integer
+      isbn:
+        type: string
+      price:
+        type: number
+      title:
+        type: string
+    type: object
+  models.User:
+    properties:
+      books:
+        items:
+          $ref: '#/definitions/models.Book'
+        type: array
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      role:
+        type: string
+    type: object
 host: localhost:8090
 info:
   contact: {}
@@ -6,29 +63,118 @@ info:
   title: Gin Book Service
   version: "1.0"
 paths:
-  /private/books:
+  /private/admin/users:
     get:
-      description: get books
       produces:
       - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
         "400":
-          description: error
+          description: Bad Request
+        "401":
+          description: Unauthorized
+      security:
+      - Bearer: []
+      summary: List users
+      tags:
+      - Users
+  /private/books:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
           schema:
-            type: string
-        default:
-          description: other error
-          schema:
-            type: string
+            items:
+              $ref: '#/definitions/models.Book'
+            type: array
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
       security:
       - Bearer: []
       summary: List books
       tags:
-      - books
+      - Books
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: book example
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.Book'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+      security:
+      - Bearer: []
+      summary: Create a book
+      tags:
+      - Books
+  /public/sessions:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request example
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.SessionRequestBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handlers.SessionStart.response'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+      summary: Start a session
+      tags:
+      - Sessions
+  /public/users:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request example
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CreateUserRequestBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+      summary: Create account
+      tags:
+      - Users
 securityDefinitions:
   Bearer:
     in: header
