# internal/api/models/book.go
@@ -1,11 +1,17 @@
 package models
 
-import "gorm.io/gorm"
+import (
+	"database/sql"
+	"time"
+)
 
 type Book struct {
-	gorm.Model
-	Title  string  `json:"title" gorm:"not null"`
-	ISBN   string  `json:"isbn" gorm:"unique"`
-	Price  float64 `json:"price"`
-	UserId int
+	ID        uint         `json:"id" gorm:"primarykey"`
+	CreatedAt time.Time    `json:"-"`
+	UpdatedAt time.Time    `json:"-"`
+	DeletedAt sql.NullTime `json:"-" gorm:"index"`
+	Title     string       `json:"title" gorm:"not null"`
+	ISBN      string       `json:"isbn" gorm:"unique"`
+	Price     float64      `json:"price"`
+	UserId    int          `json:"-"`
 }
